user registration done

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
 PORT=4000
+DB_CONNECT=mongodb://localhost:27017/uberClone
+JWT_SECRET=uber-clone-secret
+MONGO_URI=mongodb+srv://lovelyroushni33:Roushni33Mongodb@cluster0.wqqkh.mongodb.net
