integrated Google Maps API for geocoding and distance calculation in backend

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ PORT=4000
 DB_CONNECT=mongodb://localhost:27017/uberClone
 JWT_SECRET=uber-clone-secret
 MONGO_URI=mongodb+srv://lovelyroushni33:Roushni33Mongodb@cluster0.wqqkh.mongodb.net
+GOOGLE_MAPS_API_KEY = AIzaSyA2oFxLr3n70D9FpV7UooGcX1SBhzFFvIc
