--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,20 +1,10 @@
-router.post(
-  '/create',
-  [
-    body('userId')
-      .isString()
-      .isLength({ min: 24, max: 24 })
-      .withMessage('Invalid user ID'),
+.node modules
+.env# Node modules
+node_modules/
 
-    body('pickup')
-      .isString()
-      .isLength({ min: 3 })
-      .withMessage('Invalid pickup address'),
+# Environment variables
+.env
 
-    body('destination')
-      .isString()
-      .isLength({ min: 3 })
-      .withMessage('Invalid destination address'),
-  ],
-  createRide
-);
+# Optional: logs, system files, etc.
+*.log
+.DS_Store
