--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 VITE_BASE_URL = http://localhost:4000/api
 VITE_SOCKET_URL=http://localhost:4000
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyA2oFxLr3n70D9FpV7UooGcX1SBhzFFvIc
